Update Travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,3 @@
-#/usr/bin/env/sh
-set -e
-ingredients="tuplecutter"
-
-for ingredient in $ingredients
-do
-    echo "Testing ingredient: $ingredient"
-    cd $ingredient
-    sbt test
-    cd ..
-done
+language: scala
+scala:
+  - 2.11.4
